added html sections and text

--- a/index.html
+++ b/index.html
@@ -5,5 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea Cozy</title>
   </head>
-  <body></body>
+  <header>
+    <img src="./images/img-tea-cozy-logo.png" alt="Logo" />
+    <nav>
+      <ul>
+        <li>Mission</li>
+        <li>Featured Tea</li>
+        <li>Locations</li>
+      </ul>
+    </nav>
+  </header>
+
+  <body>
+    <main>
+      <section class="mission">
+        <div>
+          <h2>Our Mission</h2>
+          <h4>
+            Handpicked, Artisanally Curated, Free Range, sustainable, Small
+            Batch, Fair Trade, Organic Tea
+          </h4>
+        </div>
+      </section>
+      <section class="tea-of-month">
+        <div>
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        </div>
+        <div>
+          <figure>
+            <img src="./images/img-berryblitz.jpg" alt="Berry Blitz Tea" />
+            <figcaption>Fall Berry Blitz Tea</figcaption>
+          </figure>
+          <figure>
+            <img src="./images/img-spiced-rum.jpg" alt="Spiced Rum Tea" />
+            <figcaption>Spiced Rum Tea</figcaption>
+          </figure>
+          <figure>
+            <img src="./images/img-donut.jpg" alt="donut" />
+            <figcaption>Seasonal Donuts</figcaption>
+          </figure>
+          <figure>
+            <img src="./images/img-myrtle-ave.jpg" alt="myrtle ave tea" />
+            <figcaption>Myrtle Ave Tea</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="./images/img-bedford-bizarre.jpg"
+              alt="Bedford Bizarre Tea"
+            />
+            <figcaption>Bedford Bizarre Tea</figcaption>
+          </figure>
+        </div>
+      </section>
+      <section class="locations">
+        <div>
+          <h2>Locations</h2>
+        </div>
+        <div>
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div>
+          <h3>EastBayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div>
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <p>917-555-8904</p>
+      <p>copyright The Tea Cozy 2017</p>
+    </footer>
+  </body>
 </html>
