Add mission section css styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea Cozy</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <header>
     <img src="./images/img-tea-cozy-logo.png" alt="Logo" />
@@ -20,12 +20,14 @@
   <body>
     <main>
       <section class="mission">
-        <div>
-          <h2>Our Mission</h2>
-          <h4>
-            Handpicked, Artisanally Curated, Free Range, sustainable, Small
-            Batch, Fair Trade, Organic Tea
-          </h4>
+        <div class="mission-background">
+          <div>
+            <h2>Our Mission</h2>
+            <h4>
+              Handpicked, Artisanally Curated, Free Range, sustainable, Small
+              Batch, Fair Trade, Organic Tea
+            </h4>
+          </div>
         </div>
       </section>
       <section class="tea-of-month">
