Add tea of the month styling

--- a/index.html
+++ b/index.html
@@ -31,33 +31,33 @@
         </div>
       </section>
       <section class="tea-of-month">
-        <div>
+        <div class="tom-heading">
           <h2>Tea of the Month</h2>
           <h4>What's Steeping at The Tea Cozy?</h4>
         </div>
-        <div>
+        <div class="tom-pictures">
           <figure>
             <img src="./images/img-berryblitz.jpg" alt="Berry Blitz Tea" />
-            <figcaption>Fall Berry Blitz Tea</figcaption>
+            <figcaption><h4>Berry Blitz Tea</h4></figcaption>
           </figure>
           <figure>
             <img src="./images/img-spiced-rum.jpg" alt="Spiced Rum Tea" />
-            <figcaption>Spiced Rum Tea</figcaption>
+            <figcaption><h4>Spiced Rum Tea</h4></figcaption>
           </figure>
           <figure>
             <img src="./images/img-donut.jpg" alt="donut" />
-            <figcaption>Seasonal Donuts</figcaption>
+            <figcaption><h4>Seasonal Donuts</h4></figcaption>
           </figure>
           <figure>
             <img src="./images/img-myrtle-ave.jpg" alt="myrtle ave tea" />
-            <figcaption>Myrtle Ave Tea</figcaption>
+            <figcaption><h4>Myrtle Ave Tea</h4></figcaption>
           </figure>
           <figure>
             <img
               src="./images/img-bedford-bizarre.jpg"
               alt="Bedford Bizarre Tea"
             />
-            <figcaption>Bedford Bizarre Tea</figcaption>
+            <figcaption><h4>Bedford Bizarre Tea</h4></figcaption>
           </figure>
         </div>
       </section>
