Add location section styling

--- a/index.html
+++ b/index.html
@@ -62,26 +62,30 @@
         </div>
       </section>
       <section class="locations">
-        <div>
-          <h2>Locations</h2>
-        </div>
-        <div>
-          <h3>Downtown</h3>
-          <p>384 West 4th St</p>
-          <p>Suite 108</p>
-          <p>Portland, Maine</p>
-        </div>
-        <div>
-          <h3>EastBayside</h3>
-          <p>3433 Phisherman's Avenue</p>
-          <p>(Northwest Corner)</p>
-          <p>Portland, Maine</p>
-        </div>
-        <div>
-          <h3>Oakdale</h3>
-          <p>515 Crescent Avenue</p>
-          <p>Second Floor</p>
-          <p>Portland, Maine</p>
+        <div class="location-content">
+          <div>
+            <h2>Locations</h2>
+          </div>
+          <div class="location-boxes">
+            <div>
+              <h3>Downtown</h3>
+              <p>384 West 4th St</p>
+              <p>Suite 108</p>
+              <p>Portland, Maine</p>
+            </div>
+            <div>
+              <h3>EastBayside</h3>
+              <p>3433 Phisherman's Avenue</p>
+              <p>(Northwest Corner)</p>
+              <p>Portland, Maine</p>
+            </div>
+            <div>
+              <h3>Oakdale</h3>
+              <p>515 Crescent Avenue</p>
+              <p>Second Floor</p>
+              <p>Portland, Maine</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
