--- a/index.html
+++ b/index.html
@@ -90,10 +90,15 @@
       </section>
     </main>
     <footer>
-      <h2>The Tea Cozy</h2>
-      <h5>contact@theteacozy.com</h5>
-      <p>917-555-8904</p>
-      <p>copyright The Tea Cozy 2017</p>
+      <section class="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <p>917-555-8904</p>
+      </section>
+
+      <section class="copyright">
+        <p>copyright The Tea Cozy 2017</p>
+      </section>
     </footer>
   </body>
 </html>
