Add links to sections

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <img src="./images/img-tea-cozy-logo.png" alt="Logo" />
     <nav>
       <ul>
-        <li>Mission</li>
-        <li>Featured Tea</li>
-        <li>Locations</li>
+        <li><a href="#mission">Mission</a></li>
+        <li><a href="#tom">Featured Tea</a></li>
+        <li><a href="#locations">Locations</a></li>
       </ul>
     </nav>
   </header>
 
   <body>
     <main>
-      <section class="mission">
+      <section id="mission" class="mission">
         <div class="mission-background">
           <div>
             <h2>Our Mission</h2>
@@ -30,7 +30,7 @@
           </div>
         </div>
       </section>
-      <section class="tea-of-month">
+      <section id="tom" class="tea-of-month">
         <div class="tom-heading">
           <h2>Tea of the Month</h2>
           <h4>What's Steeping at The Tea Cozy?</h4>
@@ -61,7 +61,7 @@
           </figure>
         </div>
       </section>
-      <section class="locations">
+      <section id="locations" class="locations">
         <div class="location-content">
           <div>
             <h2>Locations</h2>
